It's still moving my friend

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,10 @@
 @tailwind utilities;
 
 @layer base {
+  html, body {
+    @apply h-full overflow-hidden;
+  }
+
   :root {
     --background: 220 17% 98%;
     --foreground: 222.2 84% 4.9%;
@@ -106,9 +110,7 @@
     --input: 39 30% 88%;
     --ring: 217.2 91.2% 59.8%;
   }
-}
 
-@layer base {
   * {
     @apply border-border;
   }
